# mbari_wec_template_cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controller.yaml
include/mbari_wec_linear_damper_cpp/: control_policy.hpp  controller.hpp
include/mbari_wec_template_cpp/: control_policy.hpp  controller.hpp
launch/: controller.launch.py
src/: controller.cpp
