<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbari_wec_linear_damper_cpp</name>
  <version>0.0.0</version>
  <description>MBARI Power Buoy Linear Damper (cpp)</description>
  <maintainer email="anderson@mbari.org">Michael Anderson</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>buoy_interfaces</depend>
  <depend>buoy_api_cpp</depend>
  <depend>simple_interp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
